<resources>
    <string name="app_name">BarberApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mohammed Sabri</string>
    <string name="nav_header_subtitle">mohammed.sabri@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_appointments">Appointments</string>
    <string name="menu_book">Book</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_about">About</string>

    <string name="bookTitle" > Book An Appointment</string>
    <string name="todo">TODO</string>
    <string name="hint_password">hint password</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">create account</string>
    <string name="sign_out">sign out</string>
    <string name="verify_email">verify email</string>
    <string name="signed_out">sign out</string>
    <string name="auth_failed">failed</string>
    <string name="time">time</string>
    <string name="select_appointment_image">Select appointment image</string>
    <string name="hint_cost">cost</string>
    <string name="hint_barber_name">barber name</string>
    <string name="action_About">About</string>
    <string name="moe">barber name</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>
    <string name="menu_About">About</string>
    <string name="default_web_client_id">"web client "</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string-array name="time_array">
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        </string-array>

</resources>