<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_appointments" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_About" />
    </group>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>